Z-index fixes.

--- a/wp-content/themes/cahillscreative/resources/views/patterns/02-molecules/components/alert/_alert.scss
+++ b/wp-content/themes/cahillscreative/resources/views/patterns/02-molecules/components/alert/_alert.scss
@@ -5,7 +5,7 @@
   background-color: $c-primary;
   color: white;
   position: relative;
-  z-index: 2;
+  z-index: 999;
 
   &__content {
     flex: 1;
