--- a/wp-content/themes/cahillscreative/resources/views/patterns/02-molecules/components/search/_search.scss
+++ b/wp-content/themes/cahillscreative/resources/views/patterns/02-molecules/components/search/_search.scss
@@ -86,6 +86,11 @@ body.search-is-active {
     visibility: visible;
     z-index: 99999;
   }
+
+  .c-filter,
+  .c-header {
+    z-index: 1;
+  }
 }
 
 /* Search Form */
