--- a/wp-content/themes/cahillscreative/resources/views/patterns/03-organisms/sections/feeds/_feeds.scss
+++ b/wp-content/themes/cahillscreative/resources/views/patterns/03-organisms/sections/feeds/_feeds.scss
@@ -2,6 +2,11 @@
   &__posts {
     width: 100%;
   }
+
+  .search & {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 .c-related-posts,
